[gd_scene load_steps=5 format=3 uid="uid://b7ty1jrbmbk73"]

[ext_resource type="Script" path="res://Character/Player/Player.gd" id="1_l65k7"]
[ext_resource type="PackedScene" uid="uid://htj7fboucjw1" path="res://Game/Camera/Camera.tscn" id="2_bwj3t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0q27"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11fnv"]
size = Vector2(48, 48)

[node name="Player" type="CharacterBody2D"]
collision_mask = 32
script = ExtResource("1_l65k7")
default_color = Color(0, 0, 0, 0.717647)
throw_line_color = Color(0.898039, 0, 0, 0.709804)
fishing_color = Color(0.156863, 0.776471, 0.176471, 0.752941)
wait_color = Color(0.87451, 0.835294, 0, 0.756863)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m0q27")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.254902)

[node name="Camera2D" parent="." instance=ExtResource("2_bwj3t")]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_11fnv")
disabled = true

[node name="FishingTimer" type="Timer" parent="."]
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="FishingTimer" to="." method="_on_fishing_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
